[package]
name = "kakaotalk-adblock-win32"
version = "0.1.1"
authors = ["cyluss <cyluss@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
native-windows-derive = "1.0.3"
native-windows-gui = "1.0.10"
registry = "1.2.3"
simple_logger = "1.12.1"
utfx = "0.1.0"
winapi = "0.3.9"
